Name:                language-mixal
Version:             0.1
Synopsis:            Parser, pretty-printer, and AST types the MIXAL
                     assembly language
License:             BSD3
License-file:        LICENSE
Author:              Jonathan Daugherty <jtd@galois.com>
Maintainer:          Jonathan Daugherty <jtd@galois.com>
Copyright:           Jonathan Daugherty, 2012
Category:            System
Build-Type:          Simple
Cabal-Version:       >=1.8

Library
  Hs-source-dirs:    src
  GHC-Options:       -Wall

  Exposed-modules:
    Language.MIXAL.AST
    Language.MIXAL.Parser
    Language.MIXAL.PP
    Language.MIXAL.Char
    Language.MIXAL.OpCode

  Build-depends:
    base >= 4,
    parsec,
    mtl,
    pretty

Executable mixal-pretty
  Hs-Source-Dirs:    src
  Main-is:           Main.hs
  GHC-Options:       -Wall
  Build-Depends:
    base,
    parsec,
    mtl,
    pretty,
    language-mixal
