Name:                language-mixal
Version:             0.1
Synopsis:            Parser, pretty-printer, and AST types for the MIXAL
                     assembly language
License:             BSD3
License-file:        LICENSE
Author:              Jonathan Daugherty <cygnus@foobox.com>
Maintainer:          Jonathan Daugherty <cygnus@foobox.com>
Copyright:           Jonathan Daugherty, 2013
Category:            Language
Build-Type:          Simple
Cabal-Version:       >=1.8

Library
  Hs-source-dirs:    src
  GHC-Options:       -Wall

  Exposed-modules:
    Language.MIXAL.AST
    Language.MIXAL.Parser
    Language.MIXAL.PP
    Language.MIXAL.Char
    Language.MIXAL.OpCode

  Build-depends:
    base >= 4,
    parsec,
    mtl,
    pretty

Executable mixal-pretty
  Hs-Source-Dirs:    programs
  Main-is:           MixalPretty.hs
  GHC-Options:       -Wall
  Build-Depends:
    base,
    pretty,
    language-mixal
